Fixed image grid “scale to fit” bug
Tall images were overflowing

--- a/src/css/components/grid/image.css
+++ b/src/css/components/grid/image.css
@@ -38,7 +38,7 @@
 }
 
 .ImageGrid-image {
-    height: auto;
+    height: 100%;
     margin: auto;
 }
 
